--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
     <string name="app_name">FilimoSearch</string>
     <string name="title_activity_main">MainActivity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="search">جستجو</string>
+    <string name="good_morning">صبح بخیر!</string>
+    <string name="good_afternoon">ظهر بخیر!</string>
+    <string name="good_evening">عصر بخیر!</string>
+    <string name="good_night">شب خوش!</string>
+    <string name="hello">سلام!</string>
 </resources>
